# sesame-remo

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
docs/: custom-actions.md  field-verification.md  official-sdk-ble-reconnect.md  status-monitor-state-machine.md
launchd/: com.example.sesame-remo.plist
sesame_remo/: __init__.py  ble_protocol.py  cli.py  config.py  crypto.py  daemon.py  history.py  key_qr.py  lock_state_monitor.py  macos_service.py  monitor_runner.py  nature.py  sesame_client.py  sound.py  status.py  status_daemon.py  touch_pro_trigger.py
sesame_remo/automation/: __init__.py  actions.py  config.py  nature.py  sound.py
sesame_remo/core/: __init__.py  config.py  key_qr.py  monitor.py  sesame_client.py
tests/: test_cli.py  test_config.py  test_daemon.py  test_history.py  test_key_qr.py  test_lock_state_monitor.py  test_macos_service.py  test_monitor_runner.py  test_nature.py  test_protocol.py  test_sesame_client.py  test_sound.py  test_status.py  test_touch_pro_trigger.py
tests/automation/: test_actions.py  test_config.py  test_nature.py
tests/core/: test_config.py  test_key_qr.py  test_monitor.py  test_protocol.py  test_sesame_client.py  test_status.py
