[project]
name = "sesame-remo"
version = "0.1.0"
description = "Monitor Sesame5 lock state and trigger local or Nature Remo feedback."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "bleak>=0.22",
  "cryptography>=42",
]

[project.scripts]
sesame-remo = "sesame_remo.cli:main"

[dependency-groups]
dev = [
  "basedpyright>=1.31",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
